// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Message Matches snapshot (desktop) 1`] = `
.c0 {
  background-color: #f5fdff;
  border: 1px solid #094C6C;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 800px;
  min-height: 88px;
  padding: var(--spacing-2x);
}

.c0 svg {
  color: #094C6C;
}

.c1 {
  box-sizing: border-box;
  max-width: calc(100% - 16px);
  padding-left: 12px;
}

.c1 p {
  font-size: 0.875rem;
  line-height: 24px;
  margin: var(--spacing-1x) 0 0 0;
}

.c2 {
  font-size: 1rem;
  font-weight: var(--font-bold);
}

<div
  className="c0"
  type="info"
>
  <svg
    color="currentColor"
    focusable={false}
    height="16"
    width="16"
  />
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      Tips
    </span>
    <p
      aria-live="polite"
    >
      Test
    </p>
  </div>
</div>
`;

exports[`Inline Message Matches snapshot (mobile) 1`] = `
.c0 {
  background-color: #fdf6f7;
  border: 1px solid #A40C2E;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 800px;
  min-height: 88px;
  padding: var(--spacing-3x) var(--spacing-2x);
}

.c0 svg {
  color: #A40C2E;
}

.c1 {
  box-sizing: border-box;
  max-width: calc(100% - 20px);
  padding-left: var(--spacing-2x);
}

.c1 p {
  font-size: 1rem;
  line-height: 24px;
  margin: var(--spacing-2x) 0 0 0;
}

.c2 {
  font-size: 1.125rem;
  font-weight: var(--font-bold);
}

<div
  className="c0"
  type="error"
>
  <svg
    color="currentColor"
    focusable={false}
    height="20"
    width="20"
  />
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      Error
    </span>
    <p
      aria-live="assertive"
    >
      Test
    </p>
  </div>
</div>
`;
